--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "compression": "^1.7.4",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "morgan": "^1.10.0",
     "node-pg-migrate": "^5.9.0",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "puppeteer": "^8.0.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
